// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UnorderedList /> can have a list style 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.c3 {
  position: relative;
  display: block;
  line-height: 1.5;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  font-weight: 400;
}

.c3::before {
  display: block;
  position: absolute;
  left: -2rem;
  line-height: 1.6;
  content: '';
  background-image: url(data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMTAwIDEwMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4gIDxjaXJjbGUgY3g9IjUwIiBjeT0iNTAiIHI9IjUwIiBmaWxsPSIjNGIyODZkIiAvPjwvc3ZnPg==);
  color: #4b286d;
  background-repeat: no-repeat;
  background-size: 100% 100%;
  width: 0.32rem;
  height: 0.32rem;
  top: 0.65rem;
}

.c1 {
  display: block;
}

.c1 {
  padding-left: calc(2rem + 1px);
}

.c1 .c0 {
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

.c1 :last-child .c0 {
  margin-bottom: 0;
}

<UnorderedList
  listStyle="circle"
  size="medium"
>
  <Styled(Box)
    between={2}
    inline={false}
    tag="ul"
  >
    <StyledComponent
      between={2}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "c0",
            "isStatic": true,
            "lastClassName": "c1",
            "rules": Array [
              "& {",
              "padding-left: calc(2rem + 1px);",
              "}",
              "& & {",
              "margin-top: 1rem;",
              "margin-bottom: 0.5rem;",
              "}",
              "& :last-child & {",
              "margin-bottom: 0;",
              "}",
              "display: block;",
            ],
          },
          "defaultProps": Object {
            "below": undefined,
            "between": undefined,
            "className": undefined,
            "horizontal": undefined,
            "inline": false,
            "inset": undefined,
            "tag": "div",
            "vertical": undefined,
          },
          "displayName": "Styled(Box)",
          "foldedComponentIds": Array [],
          "propTypes": Object {
            "below": [Function],
            "between": [Function],
            "children": [Function],
            "className": [Function],
            "horizontal": [Function],
            "inline": [Function],
            "inset": [Function],
            "tag": [Function],
            "vertical": [Function],
          },
          "render": [Function],
          "styledComponentId": "c0",
          "target": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": Object {
              "below": undefined,
              "between": undefined,
              "className": undefined,
              "horizontal": undefined,
              "inline": false,
              "inset": undefined,
              "tag": "div",
              "vertical": undefined,
            },
            "displayName": "Box",
            "propTypes": Object {
              "below": [Function],
              "between": [Function],
              "children": [Function],
              "className": [Function],
              "horizontal": [Function],
              "inline": [Function],
              "inset": [Function],
              "tag": [Function],
              "vertical": [Function],
            },
            "render": [Function],
          },
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      inline={false}
      tag="ul"
    >
      <Box
        between={2}
        className="c0 c1"
        inline={false}
        tag="ul"
      >
        <styled.div
          between={2}
          className="c0 c1"
          inline={false}
          tag="ul"
        >
          <StyledComponent
            between={2}
            className="c0 c1"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [
                  [Function],
                ],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-bdVaJa",
                  "isStatic": false,
                  "lastClassName": "c2",
                  "rules": Array [
                    [Function],
                    [Function],
                    [Function],
                    [Function],
                    [Function],
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-bdVaJa",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            inline={false}
            tag="ul"
          >
            <ul
              className="c0 c1 c0 c1 c2"
            >
              <UnorderedList.Item
                key=".$.0"
                listStyle="circle"
                size="medium"
              >
                <UnorderedItem__StyledUnorderedItem
                  iconStyle="circle"
                  size="medium"
                >
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "UnorderedItem__StyledUnorderedItem-sc-1sy38gy-0",
                          "isStatic": false,
                          "lastClassName": "c3",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "UnorderedItem__StyledUnorderedItem",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "UnorderedItem__StyledUnorderedItem-sc-1sy38gy-0",
                        "target": "li",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    iconStyle="circle"
                    size="medium"
                  >
                    <li
                      className="c3"
                      size="medium"
                    >
                      Lorem ipsum
                    </li>
                  </StyledComponent>
                </UnorderedItem__StyledUnorderedItem>
              </UnorderedList.Item>
              <UnorderedList.Item
                key=".$.2"
                listStyle="circle"
                size="medium"
              >
                <UnorderedItem__StyledUnorderedItem
                  iconStyle="circle"
                  size="medium"
                >
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "UnorderedItem__StyledUnorderedItem-sc-1sy38gy-0",
                          "isStatic": false,
                          "lastClassName": "c3",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "UnorderedItem__StyledUnorderedItem",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "UnorderedItem__StyledUnorderedItem-sc-1sy38gy-0",
                        "target": "li",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    iconStyle="circle"
                    size="medium"
                  >
                    <li
                      className="c3"
                      size="medium"
                    >
                      Dolor sit amet
                    </li>
                  </StyledComponent>
                </UnorderedItem__StyledUnorderedItem>
              </UnorderedList.Item>
            </ul>
          </StyledComponent>
        </styled.div>
      </Box>
    </StyledComponent>
  </Styled(Box)>
</UnorderedList>
`;

exports[`<UnorderedList /> can have a list style 2`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.c5 {
  width: 1rem;
  height: 1rem;
}

.c3 {
  position: relative;
  display: block;
  line-height: 1.5;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  font-weight: 400;
}

.c3::before {
  display: block;
  position: absolute;
  left: -2rem;
  line-height: 1.6;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  left: -2.125rem;
  margin-top: 0.25rem;
}

.c1 {
  display: block;
}

.c1 {
  padding-left: calc(2rem + 1px);
}

.c1 .c0 {
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

.c1 :last-child .c0 {
  margin-bottom: 0;
}

<UnorderedList
  listStyle="x"
  size="medium"
>
  <Styled(Box)
    between={2}
    inline={false}
    tag="ul"
  >
    <StyledComponent
      between={2}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "c0",
            "isStatic": true,
            "lastClassName": "c1",
            "rules": Array [
              "& {",
              "padding-left: calc(2rem + 1px);",
              "}",
              "& & {",
              "margin-top: 1rem;",
              "margin-bottom: 0.5rem;",
              "}",
              "& :last-child & {",
              "margin-bottom: 0;",
              "}",
              "display: block;",
            ],
          },
          "defaultProps": Object {
            "below": undefined,
            "between": undefined,
            "className": undefined,
            "horizontal": undefined,
            "inline": false,
            "inset": undefined,
            "tag": "div",
            "vertical": undefined,
          },
          "displayName": "Styled(Box)",
          "foldedComponentIds": Array [],
          "propTypes": Object {
            "below": [Function],
            "between": [Function],
            "children": [Function],
            "className": [Function],
            "horizontal": [Function],
            "inline": [Function],
            "inset": [Function],
            "tag": [Function],
            "vertical": [Function],
          },
          "render": [Function],
          "styledComponentId": "c0",
          "target": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": Object {
              "below": undefined,
              "between": undefined,
              "className": undefined,
              "horizontal": undefined,
              "inline": false,
              "inset": undefined,
              "tag": "div",
              "vertical": undefined,
            },
            "displayName": "Box",
            "propTypes": Object {
              "below": [Function],
              "between": [Function],
              "children": [Function],
              "className": [Function],
              "horizontal": [Function],
              "inline": [Function],
              "inset": [Function],
              "tag": [Function],
              "vertical": [Function],
            },
            "render": [Function],
          },
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      inline={false}
      tag="ul"
    >
      <Box
        between={2}
        className="c0 c1"
        inline={false}
        tag="ul"
      >
        <styled.div
          between={2}
          className="c0 c1"
          inline={false}
          tag="ul"
        >
          <StyledComponent
            between={2}
            className="c0 c1"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [
                  [Function],
                ],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-bdVaJa",
                  "isStatic": false,
                  "lastClassName": "c2",
                  "rules": Array [
                    [Function],
                    [Function],
                    [Function],
                    [Function],
                    [Function],
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-bdVaJa",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            inline={false}
            tag="ul"
          >
            <ul
              className="c0 c1 c0 c1 c2"
            >
              <UnorderedList.Item
                key=".$.0"
                listStyle="x"
                size="medium"
              >
                <UnorderedItem__StyledUnorderedItem
                  iconStyle="x"
                  size="medium"
                >
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "UnorderedItem__StyledUnorderedItem-sc-1sy38gy-0",
                          "isStatic": false,
                          "lastClassName": "c3",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "UnorderedItem__StyledUnorderedItem",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "UnorderedItem__StyledUnorderedItem-sc-1sy38gy-0",
                        "target": "li",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    iconStyle="x"
                    size="medium"
                  >
                    <li
                      className="c3"
                      size="medium"
                    >
                      <UnorderedItem__StyledIcon>
                        <StyledComponent
                          forwardedComponent={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [],
                              "componentStyle": ComponentStyle {
                                "componentId": "UnorderedItem__StyledIcon-sc-1sy38gy-1",
                                "isStatic": true,
                                "lastClassName": "c4",
                                "rules": Array [
                                  "display: flex;",
                                  "position: absolute;",
                                  "left: -2.125rem;",
                                  "margin-top: 0.25rem;",
                                ],
                              },
                              "displayName": "UnorderedItem__StyledIcon",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "styledComponentId": "UnorderedItem__StyledIcon-sc-1sy38gy-1",
                              "target": "span",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          forwardedRef={null}
                        >
                          <span
                            className="c4"
                          >
                            <Times>
                              <FeedbackIcon
                                copy={
                                  Object {
                                    "a11yText": "",
                                  }
                                }
                                copyDictionary={Object {}}
                                height="16"
                                optionalText={true}
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <FeedbackIcon__StyledSVG
                                  aria-hidden={true}
                                  height="1rem"
                                  role="img"
                                  viewBox="0 0 16 16"
                                  width="1rem"
                                >
                                  <StyledComponent
                                    aria-hidden={true}
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "FeedbackIcon__StyledSVG-sc-1swr281-0",
                                          "isStatic": false,
                                          "lastClassName": "c5",
                                          "rules": Array [
                                            [Function],
                                          ],
                                        },
                                        "displayName": "FeedbackIcon__StyledSVG",
                                        "foldedComponentIds": Array [],
                                        "render": [Function],
                                        "styledComponentId": "FeedbackIcon__StyledSVG-sc-1swr281-0",
                                        "target": "svg",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                    height="1rem"
                                    role="img"
                                    viewBox="0 0 16 16"
                                    width="1rem"
                                  >
                                    <svg
                                      aria-hidden={true}
                                      className="c5"
                                      height="1rem"
                                      role="img"
                                      viewBox="0 0 16 16"
                                      width="1rem"
                                    >
                                      <path
                                        d="M8 9.17l-4.931 4.637a.756.756 0 0 1-1.034-.021l.176.175a.718.718 0 0 1-.003-1.012l4.781-4.782a40.59 40.59 0 0 1-.083-.085l-4.72-5.017a.753.753 0 0 1 .03-1.03l-.176.177a.714.714 0 0 1 1.012-.003L8 7.157l4.948-4.948a.714.714 0 0 1 1.012.003l-.176-.176a.753.753 0 0 1 .03 1.029l-4.72 5.017a40.59 40.59 0 0 1-.083.085l4.781 4.782a.718.718 0 0 1-.003 1.012l.176-.175a.756.756 0 0 1-1.034.021L8 9.17z"
                                        fill="#c12335"
                                        fillRule="evenodd"
                                      />
                                    </svg>
                                  </StyledComponent>
                                </FeedbackIcon__StyledSVG>
                              </FeedbackIcon>
                            </Times>
                          </span>
                        </StyledComponent>
                      </UnorderedItem__StyledIcon>
                      Lorem ipsum
                    </li>
                  </StyledComponent>
                </UnorderedItem__StyledUnorderedItem>
              </UnorderedList.Item>
              <UnorderedList.Item
                key=".$.2"
                listStyle="x"
                size="medium"
              >
                <UnorderedItem__StyledUnorderedItem
                  iconStyle="x"
                  size="medium"
                >
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "UnorderedItem__StyledUnorderedItem-sc-1sy38gy-0",
                          "isStatic": false,
                          "lastClassName": "c3",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "UnorderedItem__StyledUnorderedItem",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "UnorderedItem__StyledUnorderedItem-sc-1sy38gy-0",
                        "target": "li",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    iconStyle="x"
                    size="medium"
                  >
                    <li
                      className="c3"
                      size="medium"
                    >
                      <UnorderedItem__StyledIcon>
                        <StyledComponent
                          forwardedComponent={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [],
                              "componentStyle": ComponentStyle {
                                "componentId": "UnorderedItem__StyledIcon-sc-1sy38gy-1",
                                "isStatic": true,
                                "lastClassName": "c4",
                                "rules": Array [
                                  "display: flex;",
                                  "position: absolute;",
                                  "left: -2.125rem;",
                                  "margin-top: 0.25rem;",
                                ],
                              },
                              "displayName": "UnorderedItem__StyledIcon",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "styledComponentId": "UnorderedItem__StyledIcon-sc-1sy38gy-1",
                              "target": "span",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          forwardedRef={null}
                        >
                          <span
                            className="c4"
                          >
                            <Times>
                              <FeedbackIcon
                                copy={
                                  Object {
                                    "a11yText": "",
                                  }
                                }
                                copyDictionary={Object {}}
                                height="16"
                                optionalText={true}
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <FeedbackIcon__StyledSVG
                                  aria-hidden={true}
                                  height="1rem"
                                  role="img"
                                  viewBox="0 0 16 16"
                                  width="1rem"
                                >
                                  <StyledComponent
                                    aria-hidden={true}
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "FeedbackIcon__StyledSVG-sc-1swr281-0",
                                          "isStatic": false,
                                          "lastClassName": "c5",
                                          "rules": Array [
                                            [Function],
                                          ],
                                        },
                                        "displayName": "FeedbackIcon__StyledSVG",
                                        "foldedComponentIds": Array [],
                                        "render": [Function],
                                        "styledComponentId": "FeedbackIcon__StyledSVG-sc-1swr281-0",
                                        "target": "svg",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                    height="1rem"
                                    role="img"
                                    viewBox="0 0 16 16"
                                    width="1rem"
                                  >
                                    <svg
                                      aria-hidden={true}
                                      className="c5"
                                      height="1rem"
                                      role="img"
                                      viewBox="0 0 16 16"
                                      width="1rem"
                                    >
                                      <path
                                        d="M8 9.17l-4.931 4.637a.756.756 0 0 1-1.034-.021l.176.175a.718.718 0 0 1-.003-1.012l4.781-4.782a40.59 40.59 0 0 1-.083-.085l-4.72-5.017a.753.753 0 0 1 .03-1.03l-.176.177a.714.714 0 0 1 1.012-.003L8 7.157l4.948-4.948a.714.714 0 0 1 1.012.003l-.176-.176a.753.753 0 0 1 .03 1.029l-4.72 5.017a40.59 40.59 0 0 1-.083.085l4.781 4.782a.718.718 0 0 1-.003 1.012l.176-.175a.756.756 0 0 1-1.034.021L8 9.17z"
                                        fill="#c12335"
                                        fillRule="evenodd"
                                      />
                                    </svg>
                                  </StyledComponent>
                                </FeedbackIcon__StyledSVG>
                              </FeedbackIcon>
                            </Times>
                          </span>
                        </StyledComponent>
                      </UnorderedItem__StyledIcon>
                      Dolor sit amet
                    </li>
                  </StyledComponent>
                </UnorderedItem__StyledUnorderedItem>
              </UnorderedList.Item>
            </ul>
          </StyledComponent>
        </styled.div>
      </Box>
    </StyledComponent>
  </Styled(Box)>
</UnorderedList>
`;

exports[`<UnorderedList /> renders 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.c3 {
  position: relative;
  display: block;
  line-height: 1.5;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  font-weight: 400;
}

.c3::before {
  display: block;
  position: absolute;
  left: -2rem;
  line-height: 1.6;
  content: '';
  background-image: url(data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMTAwIDEwMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4gIDxjaXJjbGUgY3g9IjUwIiBjeT0iNTAiIHI9IjUwIiBmaWxsPSIjNGIyODZkIiAvPjwvc3ZnPg==);
  color: #4b286d;
  background-repeat: no-repeat;
  background-size: 100% 100%;
  width: 0.32rem;
  height: 0.32rem;
  top: 0.65rem;
}

.c1 {
  display: block;
}

.c1 {
  padding-left: calc(2rem + 1px);
}

.c1 .c0 {
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

.c1 :last-child .c0 {
  margin-bottom: 0;
}

<ul
  class="c0 c1 c0 c1 c2"
>
  <li
    class="c3"
  >
    Lorem ipsum
  </li>
  <li
    class="c3"
  >
    Dolor sit amet
  </li>
</ul>
`;

exports[`<UnorderedList /> renders a mixed list of items 1`] = `
<Styled(Box)
  between={2}
  inline={false}
  tag="ul"
>
  <UnorderedList.Item
    itemStyle="checkmark"
    key=".$.0"
    listStyle="circle"
    size="medium"
  >
    Lorem ipsum
  </UnorderedList.Item>
  <UnorderedList.Item
    itemStyle="x"
    key=".$.1"
    listStyle="circle"
    size="medium"
  >
    Dolor sit amet
  </UnorderedList.Item>
</Styled(Box)>
`;
